Melhorias na segurança
