# backend/src/modules/account/account.routes.ts
@@ -18,6 +18,6 @@ routes.get('/confirm/:token', ConfirmEmailValidator, authController.comfirmEmail
 routes.post('/active-user', authorize([ERole.Admin]), ActiveUserValidator, authController.activeUser);
 routes.post('/make-admin', authorize([ERole.Admin]), authController.makeAdmin);
 routes.post('/forgot-password', ForgotPasswordValidator, authController.forgotPassword);
-routes.post('/reset-password', ResetPasswordValidator, authController.resetPassword);
+routes.post('/reset-password', authorize(), ResetPasswordValidator, authController.resetPassword);
 
 export default routes;
